<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Variáveis de data binding, se necessário -->
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/edtCodCliFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cod_clifor" />

            <Spinner
                android:id="@+id/spinnerTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/prompt_tipo" />

            <EditText
                android:id="@+id/edtNomeCliFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nome_clifor" />

            <EditText
                android:id="@+id/edtApelidoCliFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_apelido_clifor" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email" />

            <EditText
                android:id="@+id/edtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_celular" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telefone" />

            <EditText
                android:id="@+id/edtCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cep" />

            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_endereco" />

            <EditText
                android:id="@+id/edtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_numero" />

            <EditText
                android:id="@+id/edtComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_complemento" />

            <EditText
                android:id="@+id/edtBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_bairro" />

            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cidade" />

            <Spinner
                android:id="@+id/spinnerEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/hint_estado" />

            <EditText
                android:id="@+id/edtRg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_rg" />

            <EditText
                android:id="@+id/edtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpf" />

            <EditText
                android:id="@+id/edtContatoCliFor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_contato_clifor" />

            <EditText
                android:id="@+id/edtObs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_obs" />

            <Spinner
                android:id="@+id/spinnerFkCliForGp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/hint_fk_clifor_gp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar" />

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/btnDeletar"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/excluir" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewClientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>