<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_codigo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_banco"
        app:layout_constraintTop_toBottomOf="@id/edtCodigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtAgencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_agencia"
        app:layout_constraintTop_toBottomOf="@id/edtNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerFluxo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtAgencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtLimite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_limite"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/spinnerFluxo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtAbertura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_abertura"
        app:layout_constraintTop_toBottomOf="@id/edtLimite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtEncerramento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_encerramento"
        app:layout_constraintTop_toBottomOf="@id/edtAbertura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtEncerramento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerGpPrinc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinnerStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAddRecurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintTop_toBottomOf="@id/spinnerGpPrinc"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDeleteRecurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluir"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/spinnerGpPrinc"
        app:layout_constraintStart_toEndOf="@id/btnAddRecurso" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecursos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAddRecurso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>